# omnichromatic

./: .gitignore  Cargo.toml  README.md
omnichromatic/: Cargo.toml
omnichromatic/src/: cliargs.rs  main.rs  providers.rs
plugins/color/chaos/: Cargo.toml
plugins/color/chaos/src/: lib.rs
plugins/color/dfs/: Cargo.toml
plugins/color/dfs/src/: lib.rs
plugins/color/ordered/: Cargo.toml
plugins/color/ordered/src/: lib.rs
plugins/point/bug/: Cargo.toml
plugins/point/bug/src/: lib.rs
plugins/point/chaos/: Cargo.toml
plugins/point/chaos/src/: lib.rs
plugins/point/dfs/: Cargo.toml
plugins/point/dfs/src/: lib.rs
plugins/point/writing/: Cargo.toml
plugins/point/writing/src/: lib.rs
providers/color/: cascade.py  chaos.py  rgb.py
providers/point/: chaos.py  writer.py
src/: color_producers.rs  main.rs  order_producers.rs  producers.rs  provider.rs
src/color_producers/: gray_code.rs  neighboring_ordered.rs  neighboring_random.rs  ordered.rs  random.rs
src/order_producers/: bfs.rs  dfs.rs  random.rs  square.rs  squarefill.rs  writing.rs
types/src/: lib.rs
