[package]
name = "omnichromatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
image = { version = "0.24.7", features = ["png"] }
libloading = "0.8.1"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.6", features = ["derive"] }

