[package]
name = "point_dfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../../../types" }
lazy_static = "1.4.0"
rand = "0.8.5"

[lib]
name = "point_dfs"
crate-type = ["cdylib"]
